Camino only - Bug 388649: Clean expired favicons from the cache on quit. r=mento sr=pink